--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,10 @@
 
   width: 960px;
   height: 960px;
-  flex: 1 1 0;
 }
 
 .box {
-  width: 60px;
-  height: 60px;
+  flex: auto;
   background-color: rgb(255, 255, 255);
   border: solid 1px black;
-}
-
-.box:hover {
-  background-color: rgb(199, 199, 199);
 }
