--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: var(--primary-light);
+  height: 100vh;
 }
 
 /*Header*/
@@ -51,7 +52,6 @@ body {
   appearance: none;
   width: 54px;
   height: 40px;
-  box-shadow: 4px 4px 8px var(--primary-dark);
   border-radius: 8px;
   background-color: transparent;
   border: none;
@@ -72,6 +72,10 @@ body {
 .colorPicker:hover {
   transition: 0.07;
   scale: 1.1;
+}
+
+.activeColor {
+  box-shadow: 4px 4px 8px var(--primary-dark);
 }
 
 button {
