--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ button:hover {
 }
 
 /*---Grid---*/
+
 .grid {
   display: flex;
   flex-wrap: wrap;
@@ -182,6 +183,10 @@ button:hover {
   height: 600px;
 
   box-shadow: 12px 18px 48px rgb(100, 100, 100);
+}
+
+.invert {
+  filter: invert(1);
 }
 
 .box {
@@ -198,5 +203,5 @@ button:hover {
 }
 
 .grid-lines {
-  border: solid 1px rgb(50, 50, 50);
+  border: solid 1px rgb(80, 80, 80);
 }
