--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
   gap: 12px;
 }
 
-.colorPicker {
+.color-picker {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -77,12 +77,12 @@ body {
   border: none;
 }
 
-.colorPicker:hover {
+.color-picker:hover {
   transition: 0.07;
   scale: 1.1;
 }
 
-.activeColor {
+.active-color {
   transition: 0.07s;
   scale: 1.1;
 }
@@ -169,6 +169,7 @@ button:hover {
 
 .active {
   transition: 0.07s;
+  scale: 1.08;
   color: var(--secondary-light);
   background-color: var(--primary-dark);
 }
