--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: var(--primary-light);
   height: 100vh;
+  user-select: none;
 }
 
 /*---Header---*/
